tests/baselines/reference/classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.errors.txt
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(13,29): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(19,27): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(31,29): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts(37,27): error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?


==== classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts (4 errors) ====
    type State = { type: "running"; speed: number } | { type: "stopped" };
    
    declare const initialState: State;
    
    class Actor1 {
      static initialState;
    
      static {
        this.initialState = initialState;
    
        const localSetAsInitiallyRunning = (speed: number) => {
          this.initialState = { type: "running", speed };
          this.initialState = { type: "runnnning", speed }; // error
                                ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
        }
      }
    
      static setAsInitiallyRunning(speed: number) {
        this.initialState = { type: "running", speed };
        this.initialState = { type: "runnnning", speed }; // error
                              ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
      }
    }
    
    class Actor2 {
      static accessor initialState;
    
      static {
        this.initialState = initialState;
    
        const localSetAsInitiallyRunning = (speed: number) => {
          this.initialState = { type: "running", speed };
          this.initialState = { type: "runnnning", speed }; // error
                                ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
        }
      }
    
      static setAsInitiallyRunning(speed: number) {
        this.initialState = { type: "running", speed };
        this.initialState = { type: "runnnning", speed }; // error
                              ~~~~
!!! error TS2820: Type '"runnnning"' is not assignable to type '"running" | "stopped"'. Did you mean '"running"'?
!!! related TS6500 classStaticFieldInferenceContextualTypingOutsideOfStaticBlock1.ts:1:16: The expected type comes from property 'type' which is declared here on type 'State'
      }
    }
    